--- a/glucose-mobi/Android/app/src/main/res/values/themes.xml
+++ b/glucose-mobi/Android/app/src/main/res/values/themes.xml
@@ -1,8 +1,6 @@
 <resources>
 
-    <style name="Base.Theme.Diabeat" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar" />
-
-    <style name="Theme.Diabeat" parent="Base.Theme.Diabeat">
+    <style name="Base.Theme.Diabeat" parent="Theme.Material3.DynamicColors.DayNight.NoActionBar">
         <item name="editTextStyle">@style/monoEt</item>
     </style>
 
