--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_src.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_src.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="?dialogPreferredPadding"
     android:paddingBottom="?dialogPreferredPadding">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/photo_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -16,7 +16,7 @@
         android:gravity="center"
         android:text="照片" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/camera_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
