--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
@@ -1,79 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingStart="?dialogPreferredPadding"
-    android:paddingEnd="?dialogPreferredPadding">
+    android:padding="?dialogPreferredPadding">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?dialogPreferredPadding"
+        android:layout_marginBottom="?dialogPreferredPadding"
         android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/host_a"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:inputType="numberDecimal"
-            android:maxLength="3"
-            android:nextFocusForward="@id/host_b"
-            android:selectAllOnFocus="true" />
+            android:layout_marginEnd="3dp"
+            android:layout_weight="1">
 
-        <EditText
-            android:id="@+id/host_b"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:inputType="numberDecimal"
-            android:maxLength="3"
-            android:nextFocusForward="@id/host_c"
-            android:selectAllOnFocus="true" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/host_a"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="3"
+                android:nextFocusDown="@id/host_b"
+                android:selectAllOnFocus="true" />
 
-        <EditText
-            android:id="@+id/host_c"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:imeOptions="actionNext"
-            android:inputType="numberDecimal"
-            android:maxLength="3"
-            android:nextFocusForward="@id/host_d"
-            android:selectAllOnFocus="true" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:id="@+id/host_d"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:imeOptions="actionDone"
-            android:inputType="numberDecimal"
-            android:maxLength="3"
-            android:selectAllOnFocus="true" />
+            android:layout_marginEnd="3dp"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/host_b"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="3"
+                android:nextFocusDown="@id/host_c"
+                android:selectAllOnFocus="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="3dp"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/host_c"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="3"
+                android:nextFocusDown="@id/host_d"
+                android:selectAllOnFocus="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/host_d"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="number"
+                android:maxLength="3"
+                android:selectAllOnFocus="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="?dialogPreferredPadding"
-        android:text="Tips : 按音量上顯示此設定"
+        android:layout_marginBottom="?dialogPreferredPadding"
+        android:drawableStart="@drawable/bulb"
+        android:drawableTint="#FFFF00"
+        android:text=" 按音量上顯示此設定"
         android:typeface="monospace" />
 
-    <CheckBox
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/start_up_cb"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?dialogPreferredPadding"
         android:text="啟動時顯示" />
 
 </LinearLayout>
