--- a/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_record.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".frag.RecordFrag">
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/record_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,76 +24,100 @@
         android:background="@drawable/record_et_group_border"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="@dimen/group_padding_margin"
+        android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/glucose_et"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/group_padding_margin"
-            android:gravity="center"
+            android:layout_margin="15dp"
             android:hint="血糖值"
-            android:inputType="numberDecimal"
-            android:minEms="11" />
+            android:minEms="11">
 
-        <EditText
-            android:id="@+id/carbohydrate_et"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/glucose_et"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="numberDecimal" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/group_padding_margin"
-            android:gravity="center"
-            android:hint="碳水攝取量(g)"
-            android:inputType="numberDecimal"
-            android:minEms="11" />
+            android:layout_margin="15dp"
+            android:hint="碳水攝取量(克)"
+            android:minEms="11">
 
-        <EditText
-            android:id="@+id/exercise_et"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/carbohydrate_et"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="numberDecimal" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/group_padding_margin"
-            android:gravity="center"
-            android:hint="運動時長(min)"
-            android:inputType="numberDecimal"
-            android:minEms="11" />
+            android:layout_margin="15dp"
+            android:hint="運動時長(分)"
+            android:minEms="11">
 
-        <EditText
-            android:id="@+id/insulin_et"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/exercise_et"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="numberDecimal" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/group_padding_margin"
-            android:gravity="center"
+            android:layout_margin="15dp"
             android:hint="胰島素注射量"
-            android:inputType="numberDecimal"
-            android:minEms="11" />
+            android:minEms="11">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/insulin_et"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:inputType="numberDecimal" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/predict_btn"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/predict_carbohydrate_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/awesome"
-        android:drawableTint="?colorSurface"
         android:text="AI 預測碳水量"
+        app:icon="@drawable/awesome"
+        app:iconTint="?colorSurface"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/save_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/et_group" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/save_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/save"
-        android:drawableTint="?colorSurface"
         android:text="儲存"
+        app:icon="@drawable/save"
+        app:iconTint="?colorSurface"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/predict_btn"
+        app:layout_constraintStart_toEndOf="@id/predict_carbohydrate_btn"
         app:layout_constraintTop_toBottomOf="@id/et_group" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
