--- a/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/dialog_host.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="?dialogPreferredPadding"
+        android:baselineAligned="false"
         android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
