--- a/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
+++ b/glucose-mobi/Android/app/src/main/res/menu/nav_menu.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/recordFrag"
+        android:id="@+id/record_frag"
         android:icon="@drawable/pen_selector"
         android:title="紀錄" />
 
     <item
-        android:id="@+id/figureFrag"
+        android:id="@+id/figure_frag"
         android:icon="@drawable/chart_selector"
         android:title="圖表" />
 
     <item
-        android:id="@+id/accFrag"
+        android:id="@+id/acc_frag"
         android:icon="@drawable/acc_selector"
         android:title="帳號" />
 </menu>
