--- a/glucose-mobi/Android/app/src/main/res/navigation/nav_graph.xml
+++ b/glucose-mobi/Android/app/src/main/res/navigation/nav_graph.xml
@@ -2,23 +2,24 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@id/recordFrag">
+    app:startDestination="@id/record_frag">
 
     <fragment
-        android:id="@+id/recordFrag"
+        android:id="@+id/record_frag"
         android:name="rl.collab.diabeat.frag.RecordFrag"
         android:label="紀錄"
         tools:layout="@layout/frag_record" />
 
     <fragment
-        android:id="@+id/figureFrag"
+        android:id="@+id/figure_frag"
         android:name="rl.collab.diabeat.frag.ChartFrag"
         android:label="圖表"
         tools:layout="@layout/frag_chart" />
 
     <fragment
-        android:id="@+id/accFrag"
+        android:id="@+id/acc_frag"
         android:name="rl.collab.diabeat.frag.AccFrag"
         android:label="帳號"
         tools:layout="@layout/frag_acc" />
+
 </navigation>
