--- a/glucose-mobi/Android/app/src/main/res/layout/frag_acc.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_acc.xml
@@ -9,6 +9,7 @@
         android:id="@+id/acc_ly"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         tools:context=".frag.AccFrag">
 
         <com.google.android.material.textview.MaterialTextView
@@ -129,6 +130,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:text="生物辨識登入" />
+
+            <com.google.android.material.materialswitch.MaterialSwitch
+                android:id="@+id/strong_bio_sw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:text="嚴格生物辨識" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/log_out_btn"
