--- a/glucose-mobi/Android/app/src/main/res/layout/frag_chart.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_chart.xml
@@ -49,10 +49,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
+            <GridView
                 android:id="@+id/table"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:numColumns="5"
                 android:visibility="invisible" />
 
         </FrameLayout>
