--- a/glucose-mobi/Android/app/src/main/res/layout/frag_acc.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_acc.xml
@@ -9,7 +9,6 @@
         android:id="@+id/acc_ly"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
         tools:context=".frag.AccFrag">
 
         <com.google.android.material.textview.MaterialTextView
@@ -136,6 +135,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
+                android:enabled="false"
                 android:text="嚴格生物辨識" />
 
             <com.google.android.material.button.MaterialButton
