--- a/glucose-mobi/Android/app/src/main/res/layout/frag_chart.xml
+++ b/glucose-mobi/Android/app/src/main/res/layout/frag_chart.xml
@@ -38,7 +38,10 @@
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp">
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -54,6 +57,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:numColumns="5"
+                android:stretchMode="columnWidth"
                 android:visibility="invisible" />
 
         </FrameLayout>
