feat: enhance Google OAuth flow with improved error handling and user redirection

--- a/glucose-BE/test_server/googlelogin_jwt/templates/oauth_callback.html
+++ b/glucose-BE/test_server/googlelogin_jwt/templates/oauth_callback.html
@@ -2,7 +2,7 @@
     const code = "{{ code }}";
 
     // Send the authorization code to the back-end
-    fetch('http://yourdjangoapi.com/api/auth/google/', {
+    fetch('http://127.0.0.1:8000/api/auth/google/', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
